fix: bats tests: add set -pu
Ensure env is cleaned and do not use unset variables.

--- a/tests/unit/bash/bash_pkg_conditional_rpm.bats.jinja
+++ b/tests/unit/bash/bash_pkg_conditional_rpm.bats.jinja
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+set -pu
+
 # Mock the "rpm" command
 # mocked package: coconut-4.5.17
 # The mock is used to avoid the need to have a specific RPM package in a
