fix: aide_string: drop nl at end

--- a/shared/macros/01-general.jinja
+++ b/shared/macros/01-general.jinja
@@ -1071,7 +1071,7 @@ Configure the default Grub2 kernel command line to contain {{{ arg_name_value }}
 p+i+n+u+g+s+b+acl+selinux+xattrs+sha512
 {{%- else -%}}
 p+i+n+u+g+s+b+acl+xattrs+sha512
-{{% endif %}}
+{{%- endif -%}}
 {{%- endmacro -%}}
 
 {{#
