fix: bash_replace_or_append: sed changes
Use always LC_ALL=C with sed.

There is no need for -e.

There is no need to quote $ in [].

When replacing key + .*, /g does not make sense.

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1716,7 +1716,7 @@ Example Calls:
 {{%- endif -%}}
 # Strip any search characters in the key arg so that the key can be replaced without
 # adding any search characters to the config file.
-stripped_key="$(sed 's/[\^=\$,;+]*//g' <<< "{{{ key }}}")"
+stripped_key="$(LC_ALL=C sed 's/[\^=$,;+]*//g' <<< "{{{ key }}}")"
 
 # shellcheck disable=SC2059
 printf -v formatted_output "{{{ format }}}" "${stripped_key}" "{{{ value }}}"
@@ -1725,8 +1725,8 @@ printf -v formatted_output "{{{ format }}}" "${stripped_key}" "{{{ value }}}"
 # We search for the key string followed by a word boundary (matched by \>),
 # so if we search for 'setting', 'setting2' won't match.
 if LC_ALL=C grep -q -m 1 -i -e "{{{ key }}}\\>" "{{{ config_file }}}"; then
-    escaped_formatted_output="$(sed -e 's|/|\\/|g' <<< "${formatted_output}")"
-    LC_ALL=C sed -i --follow-symlinks "s/{{{ key }}}\\>.*/${escaped_formatted_output}/gi" "{{{ config_file }}}"
+    escaped_formatted_output="$(LC_ALL=C sed 's|/|\\/|g' <<< "${formatted_output}")"
+    LC_ALL=C sed -i --follow-symlinks "s/{{{ key }}}\\>.*/${escaped_formatted_output}/i" "{{{ config_file }}}"
 else
     {{{ bash_ensure_nl_at_eof(config_file) | indent }}}
     {{%- if cce_identifiers and 'cce' in cce_identifiers %}}
