fix: bash_ensure_nl_at_eof/doc: param must start line, add types

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1493,7 +1493,8 @@ cce="{{{ cce_identifiers['cce'] }}}"
     Do not modify file at all if there already is newline. Always follows
     symlinks.
 
-    :param file:     file to check
+:param file:     file to check
+:type file: str
 
 #}}
 {{%- macro bash_ensure_nl_at_eof(file) -%}}
