fix: ansible_ensure_pam_facts_and_authselect_profile/doc: add type

--- a/shared/macros/10-ansible.jinja
+++ b/shared/macros/10-ansible.jinja
@@ -1542,6 +1542,7 @@ Part of the grub2_bootloader_argument_absent template.
     to the PAM file to be edited is correctly set.
 
 :param pam_file:        PAM config file.
+:type pam_file: str
 
 #}}
 {{%- macro ansible_ensure_pam_facts_and_authselect_profile(pam_file) -%}}
