fix: bash_apply_authselect_changes/doc: add type

--- a/shared/macros/10-bash.jinja
+++ b/shared/macros/10-bash.jinja
@@ -1018,6 +1018,7 @@ fi
     not desired, avoid defining a backup name.
 
 :param backup_name:        Changes the default backup name used by authselect.
+:type backup_name: str
 
 #}}
 {{% macro bash_apply_authselect_changes(backup_name='') -%}}
