fix: ansible_grub2_bootloader_argument_absent/doc: fix type format

--- a/shared/macros/10-ansible.jinja
+++ b/shared/macros/10-ansible.jinja
@@ -1204,7 +1204,7 @@ Macro for Ansible remediation for removing a kernel command line argument from t
 Part of the grub2_bootloader_argument_absent template.
 
 :param arg_name: Name of the kernel command line argument that will be removed from GRUB 2 configuration.
-:type arg_name str:
+:type arg_name: str
 
 #}}
 {{%- macro ansible_grub2_bootloader_argument_absent(arg_name) -%}}
