Move regex into smaller checks and restrict ubuntu2004 tests
This commit will move a bigger regex check into smaller regex variables. Applying the commit will result in the order of the file to not matter, so long as the arguments are the same. This originally was not the case, and needed to be in a precise order.

Ubuntu2004 STIG guidelines for UBTU-20-010072 do not require that the parameter must not exist within common-auth if it already exists in /etc/security/faillock.conf. Additionally, there is no need to use "accounts" parameter as this is not needed per STIG guidelines.

--- a/shared/macros/10-ansible.jinja
+++ b/shared/macros/10-ansible.jinja
@@ -1060,6 +1060,14 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/audit.rul
 
 {{{ ansible_check_authselect_presence() }}}
 
+- name: {{{ rule_title }}} - Set /etc/pam.d/ path facts
+  set_fact:
+    {{% if 'ubuntu' in product %}}
+    pam_path: ['/etc/pam.d/common-auth']
+    {{% else %}}
+    pam_path: ['/etc/pam.d/system-auth', '/etc/pam.d/password-auth']
+    {{% endif %}}
+
 - name: {{{ rule_title }}} - Remediation where authselect tool is present
   block:
     {{{ ansible_enable_authselect_feature('with-faillock') | indent(4) }}}
@@ -1091,16 +1099,11 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/audit.rul
         insertbefore: ^auth.*sufficient.*pam_unix\.so.*
         {{% endif %}}
         state: present
-      loop:
-        {{% if 'ubuntu' in product %}}
-        - /etc/pam.d/common-auth
-        {{% else %}}
-        - /etc/pam.d/system-auth
-        - /etc/pam.d/password-auth
-        {{% endif %}}
+      loop: '{{ pam_path }}'
       when:
         - result_pam_faillock_is_enabled.found == 0
-    {{% if 'ubuntu' not in product %}}
+
+    {{% if 'ubuntu' in product %}}
     - name: {{{ rule_title }}} - Enable pam_faillock.so authsucc editing PAM files
       ansible.builtin.lineinfile:
         path: /etc/pam.d/common-auth
@@ -1121,13 +1124,7 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/audit.rul
         {{% endif %}}
         insertbefore: ^auth.*required.*pam_deny\.so.*
         state: present
-      loop:
-        {{% if 'ubuntu' in product %}}
-        - /etc/pam.d/common-auth
-        {{% else %}}
-        - /etc/pam.d/system-auth
-        - /etc/pam.d/password-auth
-        {{% endif %}}
+      loop: '{{ pam_path }}'
       when:
         - result_pam_faillock_is_enabled.found == 0
 
@@ -1138,9 +1135,7 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/audit.rul
         line: account     required      pam_faillock.so
         insertbefore: ^account.*required.*pam_unix\.so.*
         state: present
-      loop:
-        - /etc/pam.d/system-auth
-        - /etc/pam.d/password-auth
+      loop: '{{ pam_path }}'
       when:
         - result_pam_faillock_is_enabled.found == 0
     {{% endif %}}
@@ -1167,6 +1162,14 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/audit.rul
 {{%- if faillock_var_name != '' %}}
 {{{ ansible_instantiate_variables( faillock_var_name ) }}}
 {{%- endif %}}
+
+- name: {{{ rule_title }}} - Set /etc/pam.d/ path facts
+  set_fact:
+    {{% if 'ubuntu' in product %}}
+    pam_path: ['/etc/pam.d/common-auth']
+    {{% else %}}
+    pam_path: ['/etc/pam.d/system-auth', '/etc/pam.d/password-auth']
+    {{% endif %}}
 
 - name: {{{ rule_title }}} - Check the presence of /etc/security/faillock.conf file
   ansible.builtin.stat:
@@ -1225,13 +1228,7 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/audit.rul
         line: \1required\3 {{{ parameter }}}={{ {{{ faillock_var_name }}} }}
         {{%- endif %}}
         state: present
-      loop:
-        {{% if 'ubuntu' in product %}}
-        - /etc/pam.d/common-auth
-        {{% else %}}
-        - /etc/pam.d/system-auth
-        - /etc/pam.d/password-auth
-        {{% endif %}}
+      loop: '{{ pam_path }}'
       when:
         - result_pam_faillock_{{{ parameter }}}_parameter_is_present.found == 0
 
@@ -1247,13 +1244,7 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/audit.rul
         line: \1required\3 {{{ parameter }}}={{ {{{ faillock_var_name }}} }}
         {{%- endif %}}
         state: present
-      loop:
-        {{% if 'ubuntu' in product %}}
-        - /etc/pam.d/common-auth
-        {{% else %}}
-        - /etc/pam.d/system-auth
-        - /etc/pam.d/password-auth
-        {{% endif %}}
+      loop: '{{ pam_path }}'
       when:
         - result_pam_faillock_{{{ parameter }}}_parameter_is_present.found == 0
     {{%- endif %}}
@@ -1266,13 +1257,7 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/audit.rul
         regexp: (^\s*auth\s+)([\w\[].*\b)(\s+pam_faillock.so preauth.*)({{{ parameter }}})=[0-9]+(.*)
         line: \1required\3\4={{ {{{ faillock_var_name }}} }}\5
         state: present
-      loop:
-        {{% if 'ubuntu' in product %}}
-        - /etc/pam.d/common-auth
-        {{% else %}}
-        - /etc/pam.d/system-auth
-        - /etc/pam.d/password-auth
-        {{% endif %}}
+      loop: '{{ pam_path }}'
       when:
         - result_pam_faillock_{{{ parameter }}}_parameter_is_present.found > 0
 
@@ -1284,13 +1269,7 @@ The following macro remediates Audit syscall rule in :code:`/etc/audit/audit.rul
         regexp: (^\s*auth\s+)([\w\[].*\b)(\s+pam_faillock.so authfail.*)({{{ parameter }}})=[0-9]+(.*)
         line: \1required\3\4={{ {{{ faillock_var_name }}} }}\5
         state: present
-      loop:
-        {{% if 'ubuntu' in product %}}
-        - /etc/pam.d/common-auth
-        {{% else %}}
-        - /etc/pam.d/system-auth
-        - /etc/pam.d/password-auth
-        {{% endif %}}
+      loop: '{{ pam_path }}'
       when:
         - result_pam_faillock_{{{ parameter }}}_parameter_is_present.found > 0
     {{%- endif %}}
